src/app/components/cards/job-card/job-card.component.scss
@import '../../../styles/colors';

.job-card {
  width: 300px;

  .title-container {
    margin: 0 30px;
    border-bottom: 2px solid $color-gray-100;
    height: 47px;
    display: flex;
    justify-content: center;
    align-items: flex-end;
  }

  .company-image-container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100px;
    max-height: 100px;
  }

  .read-more-container {
    background-color: $color-gray-800;
  }

  .scope-container {
    background-color: $color-gray-800;
    border-radius: 10px;
    margin-bottom: 20px;

    .column{
      padding: 0;
      margin: 5px 0;
      border-right: 1px solid $color-primary-cerise;
      &:last-child{
          border: 0;
      }
    }
  }

  .description-container {
    height: 71px;
    max-height: 71px;
  }
}

